# sol-dapp1

./: .gitignore
client/: package.json
client/src/: App.tsx
client/src/idl/: init.json
demoprogram/: Anchor.toml
demoprogram/programs/demoprogram/: Cargo.toml
demoprogram/programs/demoprogram/src/: lib.rs
demoprogram/tests/: demoprogram.ts
